--- a/Required/Project/ProjectWidget.ui
+++ b/Required/Project/ProjectWidget.ui
@@ -36,6 +36,13 @@
       </widget>
      </item>
      <item>
+      <widget class="QPushButton" name="btnAddDirectory">
+       <property name="text">
+        <string>Add directory...</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <spacer name="verticalSpacer">
        <property name="orientation">
         <enum>Qt::Vertical</enum>
